# iRobotSimulator

./: README.md
Simulator/: 004.house  006.house  009.house  AbstractAlgorithm.h  Algorithm.cpp  Algorithm.h  AlgorithmLoader.cpp  AlgorithmLoader.h  AlgorithmRegistrar.cpp  AlgorithmRegistrar.h  AlgorithmRegistration.cpp  Battery.h  CMakeLists.txt  Cleaner.cpp  Cleaner.h  CleanerResult.cpp  CleanerResult.h  Debugger.h  FileLister.h  FileReader.cpp  FileReader.h  GeneralAlgorithm.cpp  GeneralAlgorithm.h  GreedyAlgorithm.cpp  GreedyAlgorithm.h  House.cpp  House.h  HouseMap2.cpp  HouseMap2.h  Location.cpp  Location.h  Makefile  NaiveAlgorithm.cpp  NaiveAlgorithm.h  Point.cpp  Point.h  ScoreManager.cpp  ScoreManager.h  Sensor.cpp  Sensor.h  (+23 more)
Simulator.xcodeproj/: project.pbxproj
Simulator.xcodeproj/xcuserdata/Roni.xcuserdatad/xcschemes/: Simulator.xcscheme
Simulator/Algorithm/: NaiveAlgorithm.cpp  NaiveAlgorithm.h
Simulator/Cleaner/: Cleaner.cpp  Cleaner.h  CleanerResult.h
Simulator/FilesReader/: FileReader.cpp  FileReader.h
Simulator/House/: House.cpp  House.h  Point.cpp  Point.h
Simulator/Interface/: AbstractAlgorithm.h  AbstractSensor.h  Direction.h  SensorInformation.h
Simulator/Sensor/: Sensor.cpp  Sensor.h
